# project

./: .gitignore  AUDIT_REPORT_2026_03_22.md  backup_db.sh  est.py  instance_security.py  main.py  market_quality_analyzer.py  market_regime.py  nginx_webapp.conf  porc.py  requirements.txt  run_webapp.py  test.py
.pyarmor/: config
compute/: __init__.py  backend.py  backend_base.py  backend_factory.py  benchmark.py  cpu_backend.py  device_config.py  gpu_backend.py  startup.py  tensor_cpu_backend.py
config/: backtest.yaml  execution.yaml  execution_config.yaml  loader.py  market_regime.yaml  ml.yaml  secondary_signals.yaml  settings.py  symbols.yaml  trading.yaml
cpp/: CMakeLists.txt  binance_filters.cpp  binance_filters.h  binance_http.cpp  binance_http.h  binance_params.cpp  binance_params.h  binance_sign.cpp  binance_sign.h  bindings.cpp  build.sh  test_verify.py
cpp/build2/: CMakeCache.txt
data/: account_pause_state.json  account_report_bot_state.json  adaptive_add_memory.json  ai_trade_manager_calibration.jsonl  ai_trade_manager_credit.jsonl  ai_trade_manager_lifecycle.jsonl  ai_trade_manager_outcomes.jsonl  ai_trade_manager_symbol_norm_stats.json  backtest_subscribers.json  blocked_symbols.json  delisting_filter.py  entry_timing_log.csv  historical_loader.py  instances_registry.json  live_stream.py  main_control_bot_state.json  main_process_state.json  market_regime_state.json  resampler.py  secondary_telegram_start_subscribers.json  signal_details_log.csv  signal_log.csv  signal_messages.json  sl_tp_decision_snapshots.jsonl  sl_tp_nn_log.csv  symbols.py  (+14 more)
(+183 files in other folders)
